# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "googleapis",
  "googleapis-raw",
]

[workspace.package]
version="0.15.0"
authors=[
    "Ferrous Systems",
    "Mozilla Services Engineering <services-engineering+code@mozilla.com>",
    "Rust on GCP Team <rust-on-gcp@google.com>"
]
license-file = "LICENSE.MD"
readme = "README.md"
repository = "https://github.com/mozilla-services/mozilla-rust-sdk/"
edition = "2021"

[workspace.dependencies]
futures = "0.3.5"
# Absolutely lock to these versions of grpcio and protobuf with a `^` prefix
# Not providing that lock means that cargo will "helpfully" update beyond those
# versions because versions are a suggestion, not a rule.
grpcio  = "^0.12.0"
# grpcio currently does NOT support protobuf 3+
protobuf = "^2.28.0"
