# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
version.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
edition.workspace = true

name = "google-cloud-rust-raw"
description = "A set of client libraries to interact with various Google Cloud Platform services"

exclude = ["grpc"]

[dependencies]
futures.workspace = true
grpcio.workspace = true
protobuf.workspace = true

[dev-dependencies]
slog = "2.5"
slog-scope = "4.3"
slog-term = "2.6"
slog-stdlog = "4.0"
slog-async = "2.5"
log = "0.4"

[features]
default = ["spanner"]
bigtable = []
pubsub = []
spanner = []
