# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "google-cloud-rust"
version = "0.12.0"
authors = [
    "Ferrous Systems",
    "Mozilla Services Engineering <services-engineering+code@mozilla.com>",
    "Rust on GCP Team <rust-on-gcp@google.com>"
    ]
license-file = "../LICENSE.md"
description = "A set of client libraries to interact with various Google Cloud Platform services"
readme = "README.md"
repository = "https://github.com/mozilla-services/google-cloud-rust"
edition = "2018"

[dependencies]
futures = "0.3.5"
grpcio = "0.9.0"
google-cloud-rust-raw = {version = "0.12.0", path="../googleapis-raw"}
